Bug 806432 - When creating the offscreen surface into which group opacity, mask or non-trivial-clipPath are painted, use the non-transformed visual overflow rect. r=roc.